--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
 
     <load ="partials/home.html" />
     <load ="partials/feature-keys.html" />
+    <load ="partials/about-us.html" />
+    <load ="partials/gallery.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
