--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     <load ="partials/feature-keys.html" />
     <load ="partials/about-us.html" />
     <load ="partials/gallery.html" />
+     <load ="partials/user-Reviews.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
