reviews and fotter

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,8 @@
     <load ="partials/feature-keys.html" />
     <load ="partials/about-us.html" />
     <load ="partials/gallery.html" />
-     <load ="partials/user-Reviews.html" />
+    <load ="partials/user-Reviews.html" />
+    <load ="partials/footer.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
