--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,6 @@
     <load ="partials/user-Reviews.html" />
     <load ="partials/footer.html" />
 
-    <script type="module" src="./js/privacy.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
