--- a/src/terms-and-conditions.html
+++ b/src/terms-and-conditions.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./scss/styles.scss" />
   </head>
 
-  <body class="therd term-page">
+  <body class="therd term-page second privacy-page">
     <header class="header_privacy header_container">
       <div class="back_container container">
         <button class="pr_btn">
