--- a/src/terms-and-conditions.html
+++ b/src/terms-and-conditions.html
@@ -8,27 +8,26 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap"
       rel="stylesheet"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&display=swap"
-      rel="stylesheet"
     />
-    <link rel="stylesheet" href="./scss/styles.scss" />
+    <link rel="stylesheet" href="./scss/term.scss" />
   </head>
 
-  <header class="header_privacy header_container">
-    <div class="back_container container">
+  <header class="header_privacy">
+    <div class="container">
       <button class="pr_btn">
-        <svg class="" width="28" height="18">
+        <svg class="" width="36" height="36">
           <use href="./img/sprite.svg#arrow"></use>
         </svg>
+        <p class="back_descr">Go back</p>
       </button>
-      <p class="back_descr">Go Back</p>
-      <!-- <a href="./index.html">Go Back</a> -->
     </div>
   </header>
+
   <body class="second privacy-page">
     <section class="privacy_section">
       <div class="container privacy_container">
@@ -74,9 +73,10 @@
             </p>
           </li>
         </ul>
+
         <h2 class="pri_s_title d_padding">License to use the service</h2>
         <p class="descr_t">
-          Subject to these Terms of Use, we grant to you a limited, Personal,
+          Subject to these Terms of Use, we grant to you a limited, personal,
           non-exclusive, non-transferable license to use the Service for your
           personal use. Your right to use the Service is limited by the terms
           set forth in these Terms of Use. Except for this license granted to
@@ -92,16 +92,18 @@
           Service at any time, for any or no reason, with or without prior
           notice, and without liability.
         </p>
+
         <h2 class="pri_s_title d_padding">Description of service</h2>
         <p class="descr_t padding_b">
           PROPLAYGLOW.COM is a free online platform where players can play all
-          games for free and without any risk of loosing. No player or user can
+          games for free and without any risk of losing. No player or user can
           lose while playing on this website. Any winnings on this site will not
           reflect the real result you might get while playing on other websites.
           All games on this site were being done for entertainment purposes only
           and this will not change. Don’t take seriously all the prizes and wins
-          at the platform. This website provides only fun for gaming funs.
+          at the platform. This website provides only fun for gaming fans.
         </p>
+
         <h2 class="pri_s_title d_padding">Access to the Service</h2>
         <p class="descr_t padding_b">
           We do not provide you with the equipment to access the Service. You
@@ -126,6 +128,7 @@
           IN ANY CASE, YOU AFFIRM THAT YOU ARE OVER THE AGE OF 18, AS THE
           SERVICE IS NOT INTENDED FOR THOSE UNDER 18.
         </p>
+
         <h2 class="pri_s_title d_padding">Updates to these Terms of Use</h2>
         <p class="descr_t padding_b">
           We may occasionally update the Service and these Terms of Use. When we
@@ -137,6 +140,7 @@
         </p>
       </div>
     </section>
+
     <footer>
       <div class="container">
         <ul class="footer_list">
