--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -19,9 +19,9 @@
   </head>
 
   <header class="header_priv">
-    <div class="container">
+    <div class="container header_container">
       <button class="pr_btn">
-        <svg class="" width="36" height="36">
+        <svg class="" width="28" height="18">
           <use href="./img/sprite.svg#arrow"></use>
         </svg>
         <p class="priv_back_descr">Go back</p>
@@ -55,52 +55,59 @@
           contact us.
         </p>
         <h2 class="priv_pri_s_title">What are your data protection rights?</h2>
-        <p class="priv_descr_t">
+        <p class="priv_descr_t priv_back_descr_t_padding">
           PROPLAYGLOW.COM wants to ensure you are fully aware of all of your
           data protection rights. Every user is entitled to the following:
         </p>
         <ul class="priv_desc_list">
           <li>
-            <p class="priv_descr_f">
-              The right to access – You have the right to request
-              PROPLAYGLOW.COM for copies of your personal data.
+            <p class="priv_descr_s">
+              <span class="accent_description">The right to access –</span> You
+              have the right to request PROPLAYGLOW.COM for copies of your
+              personal data.
             </p>
           </li>
           <li>
             <p class="priv_descr_s">
-              The right to rectification – You have the right to request that
-              PROPLAYGLOW.COM correct any information you believe is inaccurate.
-              You also have the right to request us to complete the information
-              you believe is incomplete.
+              <span class="accent_description"
+                >The right to rectification – </span
+              >You have the right to request that PROPLAYGLOW.COM correct any
+              information you believe is inaccurate. You also have the right to
+              request us to complete the information you believe is incomplete.
             </p>
           </li>
           <li>
             <p class="priv_descr_t">
-              The right to erasure – You have the right to request that
-              PROPLAYGLOW.COM erase your personal data, under certain
-              conditions.
-            </p>
-          </li>
-          <li>
-            <p class="priv_descr_t">
-              The right to restrict processing – You have the right to request
-              that PROPLAYGLOW.COM restrict the processing of your personal
+              <span class="accent_description">The right to erasure – </span>You
+              have the right to request that PROPLAYGLOW.COM erase your personal
               data, under certain conditions.
             </p>
           </li>
           <li>
             <p class="priv_descr_t">
-              The right to object to processing – You have the right to object
-              to PROPLAYGLOW.COM processing of your personal data, under certain
-              conditions.
+              <span class="accent_description"
+                >The right to restrict processing – </span
+              >You have the right to request that PROPLAYGLOW.COM restrict the
+              processing of your personal data, under certain conditions.
             </p>
           </li>
           <li>
             <p class="priv_descr_t">
-              The right to data portability – You have the right to request that
-              PROPLAYGLOW.COM transfer the data that we have collected to
-              another organization, or directly to you, under certain
-              conditions.
+              <span class="accent_description"
+                >The right to object to processing –</span
+              >
+              You have the right to object to PROPLAYGLOW.COM processing of your
+              personal data, under certain conditions.
+            </p>
+          </li>
+          <li>
+            <p class="priv_descr_t">
+              <span class="accent_description"
+                >The right to data portability –</span
+              >
+              You have the right to request that PROPLAYGLOW.COM transfer the
+              data that we have collected to another organization, or directly
+              to you, under certain conditions.
             </p>
           </li>
         </ul>
