--- a/src/terms-and-conditions.html
+++ b/src/terms-and-conditions.html
@@ -87,11 +87,21 @@
           States copyright law and international treaties.
         </p>
         <h2 class="pri_s_title">Termination of the Service</h2>
-        <p class="descr_t">
+
+        <p class="descr_t term_pad_bot">
           Termination by PROPLAYGLOW.COM. We reserve the right, in our sole
           discretion, to restrict, suspend, or terminate your access to the
           Service at any time, for any or no reason, with or without prior
           notice, and without liability.
+        </p>
+        <p class="descr_t term_pad_bot">
+          Termination by user. You may terminate the use of the Service at
+          anytime.
+        </p>
+        <p class="descr_t term_pad_bot">
+          If PROPLAYGLOW.COM stops providing the Service to you because you
+          repeatedly or egregiously breach these Terms of Use, PROPLAYGLOW.COM
+          may take measures to prevent the further use of the website.
         </p>
 
         <h2 class="pri_s_title">Description of service</h2>
@@ -106,7 +116,7 @@
         </p>
 
         <h2 class="pri_s_title">Access to the Service</h2>
-        <p class="descr_t">
+        <p class="descr_t term_pad_bot">
           We do not provide you with the equipment to access the Service. You
           are responsible for all fees charged by third parties to access the
           Service (e.g., charges by internet service providers). We reserve the
@@ -115,7 +125,7 @@
           any third party for any modification, suspension, or discontinuance of
           the Service.
         </p>
-        <p class="descr_t">
+        <p class="descr_t term_pad_bot">
           We reserve the right, at any time, to change or impose fees for access
           to and use of the Service. In order to use the Service, you must be
           the age of majority in your jurisdiction and fully able and competent
@@ -123,11 +133,16 @@
           representations and warranties set forth in these Terms and to abide
           by and comply with these Terms.
         </p>
-        <p class="descr_t">
+        <p class="descr_t term_pad_bot">
           BY DOWNLOADING, INSTALLING OR OTHERWISE USING THE SERVICE, YOU
           REPRESENT THAT YOU MEET THE ELIGIBILITY REQUIREMENTS IN THIS SECTION.
           IN ANY CASE, YOU AFFIRM THAT YOU ARE OVER THE AGE OF 18, AS THE
           SERVICE IS NOT INTENDED FOR THOSE UNDER 18.
+        </p>
+        <p class="descr_t term_pad_bot">
+          From time to time, we may apply upgrades, patches, bug fixes or other
+          Maintenance to the Service. Some features or all features of the
+          Service may not be available during Maintenance.
         </p>
 
         <h2 class="pri_s_title">Updates to these Terms of Use</h2>
