--- a/src/privacy-policy.html
+++ b/src/privacy-policy.html
@@ -32,7 +32,7 @@
     <section class="priv_section">
       <div class="container priv_container">
         <h1 class="priv_pri_title">Privacy Policy</h1>
-        <p class="priv_descr_t">
+        <p class="priv_descr_t pad_bot">
           This privacy policy will explain how our organization uses the
           personal data we collect from you when you use our website.
         </p>
